--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo de la Empresa">
+            <h2>YelpCamp</h2>
         </div>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Terrenos</a></li>
                 <li><a href="#">Nosotros</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -29,21 +30,16 @@
             <p>Ofrecemos los mejores servicios para ti.</p>
         </section>
         <section class="contenido">
-            <article class="card-body">
-                <h2 class="card-title">Título</h2>
-                <p class="card-text">Desc</p>
-                <p>Localización</p>
-            </article>
-            <!-- <article>
-                <h2>Nuestros Servicios</h2>
-                <p>Descripción de los servicios ofrecidos.</p>
-                <img src="servicio1.jpg" alt="Servicio 1">
-            </article>
             <article>
-                <h2>Sobre Nosotros</h2>
-                <p>Información sobre la empresa.</p>
-                <img src="nosotros.jpg" alt="Nosotros">
-            </article> -->
+                <div class="contenedor-img">
+                    <img src="instagram.svg" alt="Instagram">
+                </div>
+                <div>
+                    <h2 class="card-title">Título</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos possimus accusamus optio delectus enim quasi, magni animi libero labore dolorum?</p>
+                    <small><p>Localización</p></small>
+                </div>
+            </article>
         </section>
     </main>
 
@@ -51,9 +47,9 @@
         <p>Dirección: Calle Falsa 123, Ciudad, País</p>
         <p>Email: contacto@empresa.com</p>
         <div class="redes-sociales">
-            <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="facebook.svg" alt="Facebook"></a>
+            <a href="#"><img src="twitter.svg" alt="Twitter"></a>
+            <a href="#"><img src="instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 
