--- a/index.html
+++ b/index.html
@@ -16,28 +16,39 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Terrenos</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
+                <b>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Terrenos</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </b>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="banner">
-            <h1>Bienvenidos a Nuestro Sitio Web</h1>
-            <p>Ofrecemos los mejores servicios para ti.</p>
+            <h1>Terrenos de camping</h1>
         </section>
         <section class="contenido">
             <article>
-                <div class="contenedor-img">
-                    <img src="instagram.svg" alt="Instagram">
-                </div>
+                    <img src="campground_1.webp" alt="Terreno 1">
                 <div>
-                    <h2 class="card-title">Título</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos possimus accusamus optio delectus enim quasi, magni animi libero labore dolorum?</p>
-                    <small><p>Localización</p></small>
+                    <h2>Parcela con Hermosa Casa Piscina y Quincho. Centro Sur $ 250.000.000</h2>
+                    <p>Tranquilidad en sector San Gabriel de Rihue, Negrete-Región del Bio Bio.
+                        Exterior: Hermosa Parcela de 5.000 m2 de terreno; amplio estacionamiento, jardín y sombra privilegiada.</p>
+                    <small><p>Negrete, Biobío, Biobío</p></small>
+                </div>
+            </article>
+            <article>
+                    <img src="campground_2.webp" alt="Terreno 2">
+                <div>
+                    <h2>Parcela en Venta en Pucón $ 145.000.000</h2>
+                    <p>Hermosa propiedad ubicada en Km 2,1 camino volcán Pucón, rodeada de un entorno de bosque nativo.
+
+                        Cerca de Zona residencial.
+                        Esta propiedad es ideal para aquellos que buscan un refugio en la naturaleza, con amplias posibilidades de desarrollo y disfrute.</p>
+                    <small><p>Pucón, Cautín, La Araucanía</p></small>
                 </div>
             </article>
         </section>
@@ -45,7 +56,7 @@
 
     <footer>
         <p>Dirección: Calle Falsa 123, Ciudad, País</p>
-        <p>Email: contacto@empresa.com</p>
+        <p>Email: contacto@yelpcamp.com</p>
         <div class="redes-sociales">
             <a href="#"><img src="facebook.svg" alt="Facebook"></a>
             <a href="#"><img src="twitter.svg" alt="Twitter"></a>
